--- a/src/pages/public/Home/index.less
+++ b/src/pages/public/Home/index.less
@@ -1,3 +1,26 @@
-.container {
-  padding-top: 80px;
+.card {
+  background-color: white;
+  padding: 12px;
+  border-radius: 8px;
+  transition: all 0.3s;
+
+  .link {
+    display: flex;
+    justify-content: center;
+  }
+
+  .img {
+    width: 200px;
+  }
+
+  .title {
+    padding-left: 12px;
+    font-size: 18px;
+    font-weight: 600;
+  }
+}
+
+.card:hover {
+  box-shadow: #1677ff 0 0 0 2px, rgb(6 24 44 / 65%) 0 4px 6px -1px,
+    rgb(255 255 255 / 8%) 0 1px 0 inset;
 }
